vbnc/vbnc/vbnc/tests/Errors/30039-3.vb
Module bug
    Sub Main()
        Dim i As array
        For i(0) = 1 To 2

        Next
    End Sub
End Module